# django-model-subscription

./: .buildinfo  .bumpversion.cfg  .coveragerc  .envrc-example  .fussyfox.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SPECS  changelog.html  configuration.html  contents.html  genindex.html  index.html  installation.html  manage.py  model_subscription.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  register_subscribers.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  settings.html  setup.cfg  setup.py  subscribers.html  subscription_model.html  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  codacy-analysis.yml  codeql.yml  gh-page.yml  ghcr.yml  lint.yml  pythonapp.yml  release.yml  sync-doc-assets.yml  sync-gh-pages-assets.yml  sync-requirements.yml  test.yml  update-doc-assets.yml
_sources/: configuration.rst.txt  index.rst.txt  model_subscription.rst.txt  settings.rst.txt
demo/: apps.py  models.py  subscription.py  tests.py
demo/migrations/: 0001_initial.py
django_model_subcription/: settings.py  urls.py  wsgi.py
django_model_subscription/: __init__.py  settings.py  urls.py  wsgi.py
docs/: Makefile  buildDocs.sh
docs/docs/: .buildinfo  configuration.html  contents.html  genindex.html  index.html  installation.html  model_subscription.html  objects.inv  py-modindex.html  register_subscribers.html  search.html  searchindex.js  settings.html  subscribers.html  subscription_model.html
docs/docs/_sources/: installation.rst.txt  subscribers.rst.txt  subscription_model.rst.txt
docs/source/: auto_discovery.rst  changelog.md  changelog.rst  conf.py  configuration.rst  contents.rst  index.rst  installation.rst  modules.rst  register_subscribers.rst  settings.rst  subscribers.rst  subscription_model.rst
model_subscription/: __init__.py  apps.py  constants.py  decorators.py  mixin.py  models.py  observers.py  subscriber.py  tests.py  types.py  utils.py
