[tool.poetry]
name = "django-model-subscription"
version = "0.2.2"
description = "Subscription model for a django model instance."
authors = ["Tonye Jack <tonyejck@gmail.com>"]
license = "MIT"
homepage = "https://django-model-subscription.readthedocs.io/en/latest/index.html"
repository = "https://github.com/jackton1/django-model-subscription"
documentation = "https://django-model-subscription.readthedocs.io/en/latest/index.html"

keywords = [
    "django model subscription",
    "model observer",
    "model change subscriber",
    "model subscriptions",
    "model instance subscription",
]

classifiers = [
    'Environment :: Web Environment',
    'Development Status :: 5 - Production/Stable',
    'Framework :: Django',
    'Framework :: Django :: 2.0',
    'Framework :: Django :: 2.1',
    'Framework :: Django :: 2.2',
    'Framework :: Django :: 3.0',
    'Framework :: Django :: 3.1',
    'Framework :: Django :: 3.2',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]

packages = [
    { include = "model_subscription" }
]

include = [
    "CHANGELOG.md",
]

exclude = [
    "__pycache__",
    "*.pyc",
    "*.pyo",
    "*.orig",
    "tests",
    "model_subscription/tests.py",
    "demo",
]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.6.* || 3.7.* || 3.8.* || 3.9.*"
# The typing module is not in the stdlib in Python 2.7 and 3.4
typing = { version = "^3.6", python = "~3.4" }
django-lifecycle = "~0.9.0"
typing_extensions = ">=3.7,<5.0"
six = "^1.14"

[tool.poetry.dev-dependencies]
Django = {version = "^3.2.13"}
check-manifest = {version = "^0.48", python = "^3.6"}
bump2version = {version = "^1.0.0", python = "^3.6"}
git-changelog = {version = "^0.5.0", python = "^3.6.2"}
poetry = "=1.1.13"
sphinx = "=4.5.0"
sphinx-autobuild = "^2021.0.0"
sphinx_rtd_theme = "^1.0.0"
lockfile = "^0.12.2"
recommonmark = "^0.7.1"
psycopg2 = {version = "=2.9.3", python = "3.6.* || 3.7.* || 3.8.* || 3.9.*"}
mysqlclient = {version = "=2.1.0", python = "^3.6"}
tox = "^3.25"
mypy = {version = "^0.950", python = "^3.6"}
django-stubs = {version = "^1.9", python = "^3.6"}

[tool.poetry.extras]
deploy = ["bump2version", "git-changelog"]
development = ["Django", "check-manifest"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
