[tool.poetry]
name = "django-model-subscription"
version = "0.2.2"
description = "Subscription model for a django model instance."
authors = ["Tonye Jack <tonyejck@gmail.com>"]
license = "MIT"
homepage = "https://django-model-subscription.readthedocs.io/en/latest/index.html"
repository = "https://github.com/jackton1/django-model-subscription"
documentation = "https://django-model-subscription.readthedocs.io/en/latest/index.html"

keywords = [
    "django model subscription",
    "model observer",
    "model change subscriber",
    "model subscriptions",
    "model instance subscription",
]

classifiers = [
    'Environment :: Web Environment',
    'Development Status :: 5 - Production/Stable',
    'Framework :: Django',
    'Framework :: Django :: 2.0',
    'Framework :: Django :: 2.1',
    'Framework :: Django :: 2.2',
    'Framework :: Django :: 3.0',
    'Framework :: Django :: 3.1',
    'Framework :: Django :: 3.2',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]

packages = [
    { include = "model_subscription" }
]

include = [
    "CHANGELOG.md",
]

exclude = [
    "__pycache__",
    "*.pyc",
    "*.pyo",
    "*.orig",
    "tests",
    "model_subscription/tests.py",
    "demo",
]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.7.* || 3.8.* || 3.9.* || 3.10.* || 3.11.*"
# The dataclasses package is not in the stdlib in Python 3.6
dataclasses = { version = "^0.8", python = "~3.6" }
django-lifecycle = "~1.0.0"
typing_extensions = ">=3.7,<5.0"
six = "^1.14"

[tool.poetry.dev-dependencies]
Django = {version = "^4.0.0"}
check-manifest = {version = "^0.48", python = "^3.6"}
bump2version = {version = "^1.0.0", python = "^3.6"}
git-changelog = {version = "^1.0.0", python = "^3.6.2"}
poetry = "=1.1.14"
sphinx = "=4.5.0"
sphinx-autobuild = "^2021.0.0"
sphinx_rtd_theme = "^1.0.0"
lockfile = "^0.12.2"
recommonmark = "^0.7.1"
psycopg2 = {version = "=2.9.6", python = "3.6.* || 3.7.* || 3.8.* || 3.9.*"}
mysqlclient = {version = "=2.1.1", python = "^3.6"}
tox = "^3.27"
mypy = {version = "^0.961", python = "^3.6"}
django-stubs = {version = "^4.0.0", python = "^3.6"}

[tool.poetry.extras]
deploy = ["bump2version", "git-changelog"]
development = ["Django", "check-manifest"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
